<resources>

    <!--其他页面-->
    <string name="app_name">SchoolHelper</string>
    <string name="str_prompt">提示</string>
    <string name="str_out_of_application">是否退出应用?</string>
    <string name="str_ok">确定</string>
    <string name="str_cancle">取消</string>
    <string name="str_open_store_power">开启存储权限</string>
    <string name="str_open_store_power_primpt">打开相册失败，请尝试按以下路径开启存储权限：\n方法一，安全中心→授权管理→应用权限管理→应用管理→医学圈→存储→允许\n方法二，360卫士→软件管理→权限管理→医学圈→存储→允许</string>
    <string name="picker_no_items">No items.</string>
    <plurals name="picker_video_duration_warning">
        <item quantity="one">Video\'s duration limit is  %d second.</item>
        <item quantity="other">Video\'s duration limit is  %d seconds.</item>
    </plurals>
    <plurals name="picker_video_duration_max">
        <item quantity="one">这个视频的时间大于 %d 秒。</item>
        <item quantity="other">这个视频的时间大于 %d 秒。</item>
    </plurals>
    <plurals name="picker_video_duration_min">
        <item quantity="one">This video\'s duration smaller than %d second.</item>
        <item quantity="other">This video\'s duration smaller than %d seconds.</item>
    </plurals>

    <!-- 登录页面 -->
    <string name="str_login">登录</string>
    <string name="str_account">账号</string>
    <string name="str_phone_hint">请输入手机号</string>
    <string name="str_password">密码</string>
    <string name="str_password_hint">请填写密码</string>

    <!-- 主页面-->
    <string name="str_syllabus">课表</string>
    <string name="str_information">资讯</string>
    <string name="str_community">社区</string>
    <string name="str_me">我</string>

    <!--*************************************************课表***************************************************************-->

    <!-- 课表页面 -->
    <string name="str_update">修改</string>
    <string name="str_refresh_syllabus">刷新课表</string>
    <string name="str_update_syllabus">修改课表</string>

    <!--**************************************************资讯**************************************************************-->

    <!-- 选择频道-->
    <string name="str_choose_message">选择频道</string>
    <string name="str_choose">选择</string>
    <string name="str_choosed">已选择</string>

    <!--***************************************************社区*************************************************************-->

    <!-- 社区页面 -->
    <string name="str_movement">校内活动</string>
    <string name="str_my_movement">我的活动</string>
    <string name="str_send_movement">发布活动</string>
    <string name="str_movement_detail">活动详情</string>
    <string name="str_release">发布</string>
    <string name="str_message">消息</string>
    <string name="str_schoolmate_circle">校友圈</string>
    <string name="str_lost_and_found">失物招领</string>
    <string name="str_confession_wall">表白墙</string>
    <string name="str_send_schoolmate_circle">发布校友圈</string>
    <string name="str_not_add_same_pic">不能添加相同的图片</string>
    <string name="str_send_lost_found">发布失物招领</string>
    <string name="str_scan">扫一扫</string>
    <string name="my_qr_code">我的二维码</string>
    <string name="str_scan_send_movement">扫描二维码发布活动</string>
    <!--***************************************************我的*************************************************************-->
    <!-- 我的页面 -->
    <string name="str_personal_msg">个人信息</string>
    <string name="str_credit_query">学分查询</string>
    <string name="str_score_query">成绩查询</string>
    <string name="str_empty_classroom">空教室</string>
    <string name="str_collect">收藏</string>
    <string name="str_set">设置</string>
    <string name="str_logout">安全退出</string>

    <!-- 个人信息 -->
    <string name="str_head">头像</string>
    <string name="str_name">姓名</string>
    <string name="str_academy">学院</string>
    <string name="str_class">班级</string>
    <string name="str_sex">性别</string>
    <string name="str_birth_date">出生日期</string>
    <string name="str_politics_status">政治面貌</string>
    <string name="str_phone_num">手机号码</string>
    <string name="str_update_phone">修改手机号码</string>
    <string name="str_write_phone">填写手机号码</string>
    <string name="str_email">电子邮箱</string>
    <string name="str_write_email">填写邮箱</string>
    <string name="str_update_email">修改邮箱</string>

    <!-- 学分页面 -->
    <string name="str_credit">学分</string>
    <string name="str_credit_satisfy">恭喜您，您的学分已满足毕业资格！</string>
    <string name="str_credit_dissatisfy">对不起，您的学分暂时不满足毕业资格，加油哟！</string>

    <!-- 成绩查询页面 -->
    <string name="str_select_year_term">选择学年学期</string>
    <string name="str_year_is_null">学年不能为空</string>
    <string name="str_term_is_null">学期不能为空</string>

    <!-- 空教室查询 -->
    <string name="str_search">搜索</string>

    <!-- 设置 -->
    <string name="str_update_passward">修改密码</string>
    <string name="str_clear_cache">清除缓存</string>
    <string name="str_help">帮助和反馈</string>
    <string name="str_update_app">检查新版本</string>
    <string name="str_about">关于</string>
    <string name="str_telephone">联系电话</string>
    <string name="str_phone">电话</string>
    <string name="str_qq">联系QQ</string>
    <string name="str_update_passward_prompt">温馨提示：为了您的数据安全，修改密码前请填写原始密码。</string>
    <string name="str_last_passward">原始密码</string>
    <string name="str_please_write_last_passward">请输入原始密码</string>
    <string name="new_password">新密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_input_password_again">再次输入密码</string>
    <string name="confirm">确认</string>
    <string name="str_clear_cache_prompt">缓存的重要文件清空，视频文件、音频文件、图片。可清除缓存</string>
    <string name="str_warm_prompt">温馨提示</string>
    <string name="str_clear_cache_success">清除缓存成功</string>
    <string name="str_clear_cache_error">清除缓存失败,请手动清除!</string>
    <string name="str_no_cache">暂无缓存</string>
    <string name="yxck_find_new_version">发现新版本</string>
    <string name="update_cotent">更新内容:</string>
    <string name="update_right_away">立即升级</string>

    <!--****************************************************************************************************************-->

    <!-- 上下拉刷新 -->
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="loading">加载中</string>
    <string name="pull_down_refresh">下拉刷新</string>
    <string name="last_update">上次更新</string>



    <string name="scan_text"></string>
    <string name="str_open_camera_power">开启相机权限</string>
    <string name="str_open_camera_power_primpt">打开相机失败，请尝试按以下路径开启相机权限：\n方法一，安全中心→授权管理→应用权限管理→应用管理→校园助手→相机→允许\n方法二，360卫士→软件管理→权限管理→医学圈→相机→允许</string>
    <string name="ing">加载数据中</string>
</resources>
