<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical" >

    <!-- 已适配  Sing -->

    <include layout="@layout/title_line" />


    <com.luanxu.custom.percent.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <TextView
            android:textSize="@dimen/yms_font_32_px"
            android:textColor="@color/color_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_update_passward_prompt"
            app:layout_marginLeftPercent="4%w"
            app:layout_marginRightPercent="4%w"
            app:layout_marginTopPercent="2%w"
            app:layout_marginBottomPercent="2%w"
            />

        <com.luanxu.custom.percent.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:orientation="vertical" >

            <com.luanxu.custom.percent.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_heightPercent="11.7%w"
                android:gravity="center_vertical" >

                <TextView
                    android:textSize="@dimen/yms_font_32_px"
                    android:textColor="@color/color_black"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_marginLeftPercent="4%w"
                    app:layout_widthPercent="18%w"
                    android:gravity="center_vertical"
                    android:text="@string/str_last_passward"
                    android:layout_marginRight="@dimen/yms_dimens_12.0_px"
                    />

                <EditText
                    android:id="@+id/et_last_password"
                    android:textSize="@dimen/yms_font_32_px"
                    android:textColor="@color/color_black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_marginRightPercent="4%w"
                    android:background="@null"
                    android:hint="@string/str_please_write_last_passward"
                    android:inputType="textPassword"
                    android:maxLength="18"
                    />
            </com.luanxu.custom.percent.PercentLinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                app:layout_marginLeftPercent="4%w"
                app:layout_marginRightPercent="4%w"
                android:background="@color/color_divider" />

            <com.luanxu.custom.percent.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_heightPercent="11.7%w"
                android:gravity="center_vertical" >

                <TextView
                    android:textSize="@dimen/yms_font_32_px"
                    android:textColor="@color/color_black"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_marginLeftPercent="4%w"
                    app:layout_widthPercent="18%w"
                    android:gravity="center_vertical"
                    android:text="@string/new_password"
                    android:layout_marginRight="@dimen/yms_dimens_12.0_px"
                    />

                <EditText
                    android:id="@+id/et_password"
                    android:textSize="@dimen/yms_font_32_px"
                    android:textColor="@color/color_black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_marginRightPercent="4%w"
                    android:background="@null"
                    android:hint="@string/please_input_password"
                    android:inputType="textPassword"
                    android:maxLength="18"/>
            </com.luanxu.custom.percent.PercentLinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                app:layout_marginLeftPercent="4%w"
                app:layout_marginRightPercent="4%w"
                android:background="@color/color_divider" />

            <com.luanxu.custom.percent.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_heightPercent="11.7%w"
                android:gravity="center_vertical" >

                <TextView
                    android:textSize="@dimen/yms_font_32_px"
                    android:textColor="@color/color_black"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_marginLeftPercent="4%w"
                    app:layout_widthPercent="18%w"
                    android:gravity="center_vertical"
                    android:text="@string/confirm_password"
                    android:layout_marginRight="@dimen/yms_dimens_12.0_px"/>

                <EditText
                    android:id="@+id/et_password_two"
                    android:textSize="@dimen/yms_font_32_px"
                    android:textColor="@color/color_black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_marginRightPercent="4%w"
                    android:background="@null"
                    android:hint="@string/please_input_password_again"
                    android:inputType="textPassword"
                    android:maxLength="18"/>
            </com.luanxu.custom.percent.PercentLinearLayout>

        </com.luanxu.custom.percent.PercentLinearLayout>

        <com.luanxu.custom.percent.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_confirm"
                android:textSize="@dimen/yms_font_32_px"
                android:textColor="@color/color_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_heightPercent="11.7%w"
                app:layout_marginLeftPercent="4%w"
                app:layout_marginRightPercent="4%w"
                app:layout_marginTopPercent="8%w"
                android:background="@drawable/bg_shape_blue_8px"
                android:gravity="center"
                android:text="@string/confirm" />
        </com.luanxu.custom.percent.PercentLinearLayout>
    </com.luanxu.custom.percent.PercentLinearLayout>
</LinearLayout>