<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.luanxu.custom.NoScrollViewPager
        android:id="@+id/viewpager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/pll_radio"
        android:layout_alignWithParentIfMissing="true" >
    </com.luanxu.custom.NoScrollViewPager>

    <com.luanxu.custom.percent.PercentLinearLayout
        android:id="@+id/pll_radio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="#f9f9f9"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_999999" />

        <LinearLayout
            android:id="@+id/ll_bottom_tab"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            app:layout_heightPercent="15%w"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/yms_dimens_8.0_px" >

            <FrameLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="false" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:drawablePadding="-2dp"
                    android:drawableTop="@drawable/bg_reference"
                    android:gravity="center"
                    android:text="@string/str_syllabus"
                    android:textColor="@color/bottom_title_color"
                    android:textSize="@dimen/word_size_12sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="false" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:drawablePadding="-2dp"
                    android:drawableTop="@drawable/bg_reference"
                    android:gravity="center"
                    android:text="@string/str_information"
                    android:textColor="@color/bottom_title_color"
                    android:textSize="@dimen/word_size_12sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="false" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:drawablePadding="-2dp"
                    android:drawableTop="@drawable/continue_edu"
                    android:gravity="center"
                    android:text="@string/str_community"
                    android:textColor="@color/bottom_title_color"
                    android:textSize="@dimen/word_size_12sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="false" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:drawablePadding="-2dp"
                    android:drawableTop="@drawable/me"
                    android:gravity="center"
                    android:text="@string/str_me"
                    android:textColor="@color/bottom_title_color"
                    android:textSize="@dimen/word_size_12sp" />
            </FrameLayout>
        </LinearLayout>
    </com.luanxu.custom.percent.PercentLinearLayout>

</RelativeLayout>