<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.luanxu.custom.percent.PercentLinearLayout
        android:layout_marginTop="@dimen/yms_dimens_40.0_px"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/shape_white_5dp"
        android:layout_height="wrap_content">
        <com.luanxu.custom.percent.PercentRelativeLayout
            android:background="#F4F9FF"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/yms_dimens_180.0_px">
            <ImageView
                android:layout_marginTop="@dimen/yms_dimens_5.0_px"
                android:layout_marginRight="@dimen/yms_dimens_5.0_px"
                android:id="@+id/iv_dialog_update_cancle"
                android:src="@mipmap/img_dialog_update_cancle"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/yms_font_32_px"/>
            <TextView
                android:id="@+id/tv_find_new_version"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/yms_font_32_px"
                android:textColor="@color/color_blue"
                android:layout_marginTop="@dimen/yms_dimens_80.0_px"
                android:text="@string/yxck_find_new_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tv_find_new_version"
                android:id="@+id/tv_dialog_version_code"
                android:textColor="@color/color_blue"
                android:layout_marginTop="@dimen/yms_dimens_7.0_px"
                android:text="V1.0.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.luanxu.custom.percent.PercentRelativeLayout>
        <com.luanxu.custom.percent.PercentLinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/yms_dimens_300.0_px">
            <TextView
                android:textColor="@color/color_black"
                android:textSize="@dimen/yms_font_30_px"
                android:layout_marginTop="@dimen/yms_dimens_20.0_px"
                android:layout_marginLeft="@dimen/yms_dimens_44.0_px"
                android:text="@string/update_cotent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_dialog_update_tip_one"
                android:textColor="@color/color_9c9c9c"
                android:textSize="@dimen/yms_font_28_px"
                android:layout_marginTop="@dimen/yms_dimens_20.0_px"
                android:layout_marginLeft="@dimen/yms_dimens_44.0_px"
                android:text="1.新增患者会诊管理功能"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_dialog_update_tip_two"
                android:textColor="@color/color_9c9c9c"
                android:textSize="@dimen/yms_font_28_px"
                android:layout_marginTop="@dimen/yms_dimens_10.0_px"
                android:layout_marginLeft="@dimen/yms_dimens_44.0_px"
                android:text="2.优化了部分交互设计"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_dialog_update_tip_three"
                android:textColor="@color/color_9c9c9c"
                android:textSize="@dimen/yms_font_28_px"
                android:layout_marginTop="@dimen/yms_dimens_10.0_px"
                android:layout_marginLeft="@dimen/yms_dimens_44.0_px"
                android:text="3.修复了部分bug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_dialog_update_tip_four"
                android:textColor="@color/color_9c9c9c"
                android:textSize="@dimen/yms_font_28_px"
                android:layout_marginTop="@dimen/yms_dimens_10.0_px"
                android:layout_marginLeft="@dimen/yms_dimens_44.0_px"
                android:text="4.新增的部分功能将开放"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_dialog_update_tip_five"
                android:textColor="@color/color_9c9c9c"
                android:textSize="@dimen/yms_font_28_px"
                android:layout_marginTop="@dimen/yms_dimens_10.0_px"
                android:layout_marginLeft="@dimen/yms_dimens_44.0_px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </com.luanxu.custom.percent.PercentLinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_marginBottom="@dimen/yms_dimens_40.0_px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
             <Button
                 android:id="@+id/bt_dialog_update_upgrade"
                 android:textColor="@color/color_white"
                 android:text="@string/update_right_away"
                 android:background="@drawable/bg_shape_blue_8px"
                 android:layout_width="@dimen/yms_dimens_400.0_px"
                 android:layout_height="@dimen/yms_dimens_82.0_px" />
        </LinearLayout>
    </com.luanxu.custom.percent.PercentLinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/img_dialog_update_rocket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</FrameLayout>